# gozerai-telemetry

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/gozerai_telemetry/: __init__.py  correlation.py  health.py  log_format.py  metrics.py  patterns.py  slo.py  tracing.py
src/gozerai_telemetry/autonomy/: __init__.py  anomaly_detector.py  circuit_tuner.py  health_tuner.py  interval_tuner.py  offline_buffer.py  retry_optimizer.py
src/gozerai_telemetry/performance/: __init__.py  batching.py  efficient_histogram.py  export_buffer.py  lazy.py  span_pool.py
src/gozerai_telemetry/resilience/: __init__.py  _base.py  adaptive_timeout.py  hedged_request.py  load_shedding.py
src/gozerai_telemetry/self_sufficiency/: __init__.py  export_formats.py  metric_docs.py  offline_storage.py  self_healing.py  text_dashboard.py
tests/: test_async_ratelimiter.py  test_async_tracing.py  test_autonomy.py  test_correlation.py  test_health.py  test_health_timeout.py  test_histogram_percentiles.py  test_log_format.py  test_metrics.py  test_patterns.py  test_performance_modules.py  test_resilience.py  test_resilience_advanced.py  test_resilience_integration.py  test_self_sufficiency.py  test_slo.py  test_tracing.py
